tests/snapshots/value_lists/fmSyntaxColorizer/Collection - ID 19.xml.snap
---
source: src/main.rs
expression: output_content
---
<ValueList id="19" name="Collection">
	<Source value="FromField"></Source>
	<Field>
		<PrimaryField show="True" sort="True">
			<FieldReference id="41" name="Collection">
				<TableOccurrenceReference id="1065113" name="_Syntax"></TableOccurrenceReference>
			</FieldReference>
		</PrimaryField>
		<ShowRelated value="False"></ShowRelated>
	</Field>
	<UUID modifications="0" userName="R.Watson" accountName="admin" timestamp="2020-07-06T12:26:19">B591DFAB-EA9F-43AE-909C-139410BD003C</UUID>
</ValueList>
