tests/snapshots/value_lists/fmSyntaxColorizer/Colors - ID 1.xml.snap
---
source: src/main.rs
expression: output_content
---
<ValueList id="1" name="Colors">
	<Source value="FromField"></Source>
	<Field>
		<PrimaryField show="True" sort="True">
			<FieldReference id="2" name="ColorName">
				<TableOccurrenceReference id="1065121" name="Syntax.Palette.Color_VL"></TableOccurrenceReference>
			</FieldReference>
		</PrimaryField>
		<ShowRelated value="True">
			<TableOccurrenceReference id="1065113" name="_Syntax"></TableOccurrenceReference>
		</ShowRelated>
	</Field>
	<UUID modifications="6" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">4C6CB0F4-CE8F-4B37-8311-E63F9B8A390C</UUID>
</ValueList>
