tests/snapshots/value_lists/fmSyntaxColorizer/Colors for Dynamic1 - ID 12.xml.snap
---
source: src/main.rs
expression: output_content
---
<ValueList id="12" name="Colors for Dynamic1">
	<Source value="FromField"></Source>
	<Field>
		<PrimaryField show="True" sort="True">
			<FieldReference id="2" name="ColorName">
				<TableOccurrenceReference id="1065159" name="Home.Syntax_Dynamic1.Palette.Color_VL"></TableOccurrenceReference>
			</FieldReference>
		</PrimaryField>
		<ShowRelated value="True">
			<TableOccurrenceReference id="1065123" name="_Home"></TableOccurrenceReference>
		</ShowRelated>
	</Field>
	<UUID modifications="9" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">99AC0EBD-757A-42AE-AD25-1866FF3FFC8E</UUID>
</ValueList>
