tests/snapshots/value_lists/fmSyntaxColorizer/Colors for Dynamic2 - ID 13.xml.snap
---
source: src/main.rs
expression: output_content
---
<ValueList id="13" name="Colors for Dynamic2">
	<Source value="FromField"></Source>
	<Field>
		<PrimaryField show="True" sort="True">
			<FieldReference id="2" name="ColorName">
				<TableOccurrenceReference id="1065160" name="Home.Syntax_Dynamic2.Palette.Color_VL"></TableOccurrenceReference>
			</FieldReference>
		</PrimaryField>
		<ShowRelated value="True">
			<TableOccurrenceReference id="1065123" name="_Home"></TableOccurrenceReference>
		</ShowRelated>
	</Field>
	<UUID modifications="2" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">A9A0B1BD-F080-41DE-A7A2-8D32BE125977</UUID>
</ValueList>
