tests/snapshots/value_lists/fmSyntaxColorizer/Colors for Dynamic4 - ID 15.xml.snap
---
source: src/main.rs
expression: output_content
---
<ValueList id="15" name="Colors for Dynamic4">
	<Source value="FromField"></Source>
	<Field>
		<PrimaryField show="True" sort="True">
			<FieldReference id="2" name="ColorName">
				<TableOccurrenceReference id="1065162" name="Home.Syntax_Dynamic4.Palette.Color_VL"></TableOccurrenceReference>
			</FieldReference>
		</PrimaryField>
		<ShowRelated value="True">
			<TableOccurrenceReference id="1065123" name="_Home"></TableOccurrenceReference>
		</ShowRelated>
	</Field>
	<UUID modifications="2" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">39667F35-5F77-4D0E-91DF-AA6189F4FBCD</UUID>
</ValueList>
