tests/snapshots/value_lists/fmSyntaxColorizer/Languages.xml.snap
---
source: src/main.rs
expression: output_content
---
<ValueList id="6" name="Languages.Sort">
	<Source value="Custom"></Source>
	<CustomValues>
		<Text><![CDATA[EnglishFrenchItalianGermanSwedishSpanishDutchJapaneseSimplified ChineseTraditional Chinese]]></Text>
	</CustomValues>
	<UUID modifications="4" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">E26CB62E-460D-4D53-9BF5-B9136B5A8356</UUID>
</ValueList>
